--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
-
+    <script type="module" src="/index.js "></script>
 </head>
 
 <body>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf8QJr96TN4RwSEsnEghuHlsVUQHpzhic&callback=initMap&v=weekly" defer></script>
 </body>
 
 </html>
