--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Not Found</title>
-    <script type="module" src="/index.js "></script>
+    <script type="module" src="index.mjs "></script>
 </head>
 
 <body>
